# otus-python-course

./: .gitignore  README.md  app.py  contest.py  db_test.py  example-db-01.sqlite  oop_test.py  requirements-dev.txt  requirements.txt  test-aiohttp.py  test-async.py  test-configparser.py  test-csv.py  test-faker.py  test-pydantic.py  tmp_csv.csv
django/zoo/animals/: admin.py  models.py  tasks.py  views.py
django/zoo/zoo/: celery.py  settings.py  urls.py
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  item.py  main.py  user.py
homework_03/app/: item.py  main.py  pyproject.toml  test_item.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
sql_alchemy/: main.py
sql_alchemy/alembic/: env.py
sql_alchemy/alembic/versions/: 64a35a022893_add_tag_table.py  84bb02770633_alter_default.py  b0179d0a5357_added_table_article.py  b33949c6c7ef_add_transitional_table_tag_article.py  f063423f00ee_added_table_author.py  f1498c4c6c6a_added_bio_tag_in_author.py  f6294b0d4cd7_added_table_user.py
sql_alchemy/models/: __init__.py  article.py  articles_tags.py  author.py  db.py  mixins.py  tag.py  user.py
test-flask/: app.py
test-flask/templates/movies/: about.html  add.html  base.html  list.html
test-flask/views/: movies.py
test-sql-alchemy/: 04_orm_query.py  example-db-04.sqlite  example-db.sqlite  main.py
test-sql-alchemy/models/: author.py
unittest-pytest/: in-modules.py  solver.py  test_solver.py
(+7 files in other folders)
