[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["vkuzmenkova <valentinakuzmenkova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
pydantic = "^1.8.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
